--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_game"
-    tools:context=".GameActivity">
+    tools:context=".ui.GameActivity">
 
     <ImageView
         android:id="@+id/imageViewDuck"
